styles.css
/* ... */
@media all and (max-width: 1150px) {
  * {
    font-size: 12px;
  }
  .nav-text {
    font-size: 18px;
  }
  .primary-text {
    font-size: 16px;
  }
  .heading-text {
    font-size: 36px;
  }
  .skill-text {
    font-size: 12px;
  }
  .button2 {
    width: 15rem;
  }
  #about-me-text-container,
  #skills-container {
    width: 100%;
  }
  #be-news-description,
  #fe-news-description,
  #my-plants-description {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

@media all and (max-width: 910px) {
  * {
    font-size: 16px;
  }
  .home-header {
    font-size: 30px;
  }
  .about-me-container {
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }
  #skills-list {
    gap: 2rem;
  }
  .nav-text {
    font-size: 16px;
  }
  #projects-container {
    width: calc(100% - 4rem);
    gap: 5rem;
  }
  .skills-entry,
  .about-me-entry {
    transition: none;
    transform: translateX(0%);
  }
  .heading-text {
    font-size: 28px;
  }
  .fe-news-image-container,
  .be-news-image-container,
  .mock-up-container,
  .project-image {
    width: 80%;
  }
  .projects-heading {
    margin-top: 4rem;
  }
  #fe-news-container,
  #my-plants-container {
    width: 100%;
    display: flex;
    flex-direction: column-reverse;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    background-color: var(--secondary-bg-colour);
    padding: 2rem;
    border-radius: 1rem;
  }
  #be-news-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    background-color: var(--secondary-bg-colour);
    border-radius: 1rem;
    padding: 2rem;
  }
  .fe-news-image-container,
  .be-news-image-container {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .contact-me-heading {
    margin-top: 6rem;
  }
  #about-me-text-container {
    width: 80%;
    gap: 2rem;
  }
  .about-me-container {
    gap: 3rem;
  }
  .my-plants-mock-up {
    width: 9rem;
  }
  .me-picture {
    width: 50%;
  }
  h3 {
    text-align: center;
  }

  #contact-me-container {
    width: 90%;
  }
  .contact-form,
  input,
  textArea {
    width: 100%;
  }
  .fe-news-image-container,
  .be-news-image-container,
  .mock-up-container,
  .project-image {
    width: 80%;
  }
}

@media all and (max-width: 770px) {
  .heading-text {
    font-size: 30px;
  }
  #about-me-text-container {
    width: 100%;
  }
  .home-header {
    font-size: 22px;
  }
  h3 {
    font-size: 22px;
  }
  .tertiary-header {
    font-size: 24px;
  }
  .fe-news-image-container,
  .be-news-image-container,
  .mock-up-container,
  .project-image {
    width: 100%;
  }
  .my-plants-mock-up {
    width: 8rem;
  }
  .nav-menu {
    position: fixed;
    left: -100%;
    top: 5rem;
    flex-direction: column;
    background-color: var(--secondary-bg-colour);
    width: 100%;
    border-radius: 10px;
    border-bottom: none;
    text-align: center;
    transition: 0.3s;
  }
  .nav-menu.active {
    left: 0;
  }
  .nav-item {
    margin: 1.5rem 0;
  }
  .hamburger {
    display: block;
    cursor: pointer;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
  .me-picture {
    width: 65%;
  }
  #about-me-container {
    justify-content: space-evenly;
  }
  .contact-form,
  input,
  textArea {
    width: 100%;
  }
}
@media all and (max-width: 700px) {
  .my-plants-mock-up {
    width: 7rem;
  }
  .contact-form,
  input,
  textArea {
    width: 100%;
  }
}

@media all and (max-width: 665px) {
  .heading-text {
    font-size: 30px;
  }
  .nav-text {
    font-size: 14px;
  }
  .home-header,
  #logo {
    font-size: 22px;
  }
  h3 {
    font-size: 18px;
  }
  .project-image {
    width: 50rem;
  }
  #about-me-text-container,
  .project-image {
    width: 90%;
  }
  .my-plants-mock-up {
    width: 6rem;
  }
  #fe-news-container {
    width: 100%;
    display: flex;
    flex: column;
    justify-content: center;
    align-items: center;
  }
  .projects-heading {
    margin-top: 6rem;
  }
}

@media all and (max-width: 590px) {
  * {
    font-size: 12px;
  }
  #contact-me-container {
    width: 90%;
  }
  .heading-text {
    font-size: 26px;
  }
  form {
    padding-left: 2rem;
    padding-right: 2rem;
    width: 100%;
  }
  input,
  textArea {
    align-self: stretch;
    font-size: 14px;
  }
  .primary-text {
    font-size: 14px;
  }
  .button2 {
    width: 15rem;
  }
  .footer {
    height: 12rem;
  }
  .contact-form {
    margin-bottom: 10rem;
  }
  #about-me-text-container,
  .project-image {
    width: 100%;
  }
  .my-plants-mock-up {
    width: 8rem;
  }
  .fe-news-image-container,
  .be-news-image-container,
  .mock-up-container,
  .project-image {
    width: 100%;
  }
}

@media all and (max-width: 530px) {
  * {
    font-size: 8px;
  }
  .contact-me-container {
    width: 100%;
    align-self: stretch;
  }
  form {
    width: 100%;
  }
  #job-heading {
    margin-bottom: 3rem;
  }
  input,
  textArea {
    align-self: stretch;
  }
  .tailwind-image {
    width: 4rem;
  }
  .skills-text {
    font-size: 10px;
  }
  .email-footer-icon,
  .github-footer-icon,
  .chevron {
    width: 2.5rem;
  }
  .footer-icons {
    margin-top: 2rem;
  }
  .skill-container {
    width: 9rem;
    height: 6rem;
  }
  .heading-text {
    font-size: 26px;
  }
  .primary-text {
    font-size: 14px;
  }
  #about-me-text-container,
  .project-image,
  .fe-news-description,
  .be-news-description,
  .my-plants-description {
    width: 80%;
  }
  .tertiary-header {
    font-size: 14px;
  }
  .my-plants-mock-up {
    width: 10rem;
  }
  .footer {
    height: 18rem;
  }
  textArea {
    height: 16rem;
  }
}
/* ... */

